--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel-doctrine/orm": "^1.1",
         "league/factory-muffin": "~2.0",
         "gedmo/doctrine-extensions": "^2.4",
-        "laravel/framework": "~5"
+        "laravel/framework": "^5"
     },
     "require-dev": {
     },
